update to commedy clones

--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Bithu - NFT Minting/Collection Landing Page React-Nextjs Template"
+      content="Commedy Clones"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
@@ -25,13 +25,12 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>
-      Bithu - NFT Minting/Collection Landing Page React-Nextjs Template
+      Commedy Clones
     </title>
   </head>
   <body>
     <noscript
-      >Bithu - NFT Minting/Collection Landing Page React-Nextjs
-      Template</noscript
+      >Commedy Clones NFTs</noscript
     >
     <div id="root"></div>
     <!--
