slider imgs reset, typos changes

--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Commedy Clones"
+      content="Comedy Coins"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
@@ -25,12 +25,12 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>
-      Commedy Clones
+      Comedy Coins
     </title>
   </head>
   <body>
     <noscript
-      >Commedy Clones NFTs</noscript
+      >Comedy Coins NFTs</noscript
     >
     <div id="root"></div>
     <!--
